fixed contact content alignment

--- a/src/app/components/contacts/contacts.scss
+++ b/src/app/components/contacts/contacts.scss
@@ -47,9 +47,8 @@ button{
 }
 
 .contact-details-mobile{
-    height: 100vh;
     width: 100%;
-    
+
     display: none;
     flex-direction: column;
     justify-content: start;
